
# Generated Cmake Pico project file

cmake_minimum_required(VERSION 3.13)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Initialise pico_sdk from installed location
# (note this can come from environment, CMake cache etc)


set(PICO_BOARD pico_w CACHE STRING "Board type")

# Pull in Raspberry Pi Pico SDK (must be before project)
include(pico_sdk_import.cmake)

project(RoboPicoW C CXX ASM)

# Initialise the Raspberry Pi Pico SDK
pico_sdk_init()

# Add executable. Default name is the project name, version 0.1

add_executable(RoboPicoW RoboPicoW.c 
                lib/ssd1306.c # Biblioteca para o display OLED
)

pico_set_program_name(RoboPicoW "RoboPicoW")
pico_set_program_version(RoboPicoW "0.1")

# Modify the below lines to enable/disable output over UART/USB
pico_enable_stdio_uart(RoboPicoW 0)
pico_enable_stdio_usb(RoboPicoW 1)

# Add the standard library to the build
target_link_libraries(RoboPicoW
        pico_stdlib
        hardware_gpio
        hardware_adc
        pico_cyw43_arch_lwip_threadsafe_background
        pico_cyw43_arch_none
        hardware_gpio
        hardware_i2c
        )

# Add the standard include files to the build
target_include_directories(RoboPicoW PRIVATE
        ${CMAKE_CURRENT_LIST_DIR}
        ${PICO_SDK_PATH}/lib/lwip/src/include
        ${PICO_SDK_PATH}/lib/lwip/src/include/arch
        ${PICO_SDK_PATH}/lib/lwip/src/include/lwip
)

target_sources(RoboPicoW PRIVATE
    ${PICO_SDK_PATH}/lib/lwip/src/apps/http/httpd.c
    ${PICO_SDK_PATH}/lib/lwip/src/apps/http/fs.c
)

pico_add_extra_outputs(RoboPicoW)

